force-app/main/default/objects/copado__Test_Suite_Script__c/copado__Test_Suite_Script__c.object-meta.xml
<CustomObject>
    <label>Test Suite Script</label>
    <nameField>
        <displayFormat>TSS-{0000}</displayFormat>
        <label>Test Suite Script Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Suite Scripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>