force-app/main/default/objects/copado__Test_Suite_Script__c/fields/copado__Test_Script__c.field-meta.xml
<CustomField>
    <fullName>copado__Test_Script__c</fullName>
    <label>Test Script</label>
    <referenceTo>copado__Test_Script__c</referenceTo>
    <relationshipLabel>Test Suite Scripts</relationshipLabel>
    <relationshipName>Test_Suite_Scripts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>